<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="height_hint">Height (cm)</string>
    <string name="bmi_value">BMI:</string>
    <string name="status">Status:</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
</resources>